--- a/2019/1/MAT1610/12.5/solucion.tex
+++ b/2019/1/MAT1610/12.5/solucion.tex
@@ -113,5 +113,461 @@
 \end{center}
 
 \begin{preguntas}
+\item Encuentra una antiderivada para cada una de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x) = 4x^3$
+\task $f(x) = 8x\sin (2x^2)$
+\task $f(x) = \dfrac{3}{2x}$
+\task $f(x) = \dfrac{1}{1+4x^2}$
+\end{tasks}
+\begin{solucion}
+Una antiderivada corresponde a una función cuya derivada nos de la función original, por lo que debemos pensar que cosa al derivarla nos dará la función que tenemos.
+\begin{enumerate}[a)]
+\item $f(x) = 4x^3$\\
+\\
+Notemos que al derivar algo de la forma $x^n$, siempre se pierde un grado, por lo que la antiderivada debe tener un grado más que $f(x)$ y contrarestar el exponente que pasará multiplicando al derivar, esto es,
+$$F(x) = x^4$$
+\item $f(x) = 8x\sin (2x^2)$\\
+\\
+Para obtener la función $\sin(x)$ debemos derivar el $-\cos(x)$. Sin embargo, necesitamos que "aparezca" un $x$ afuera multiplicando la función. Esto lo podemos lograr con la regla de la cadena. Además, como al derivar una función con la regla de la cadena, lo que esta adentro se mantiene, debemos dejar $2x^2$ adentro del coseno. Luego,
+$$F(x) = -2\cos(2x^2)$$
+\item $f(x) = \dfrac{3}{2x}$\\
+\\
+Notemos que $f(x) = \dfrac{3}{2} \cdot \dfrac{1}{x}$. Luego,
+$$F(x) = \dfrac{3}{2} \ln(x)$$
+\item $f(x) = \dfrac{1}{1+4x^2}$\\
+\\
+Es evidente que $f(x)= \dfrac{1}{1+(2x)^2}$, por lo que
+$$F(x) = \dfrac{\arctan(2x)}{2}$$
+\end{enumerate}
+\end{solucion}
+\item Calcule la siguiente integral, usando la definición de esta
+	$$\int_2^5(4-2x)dx$$
+\begin{solucion}
+Usando la integral por definición, podemos escribir la integral como
+		$$\int_2^5(4-2x)dx = \lim\limits_{n\ra \infty} \dfrac{5-2}{n} \sum\limits_{i=1}^n f \left(2+\dfrac{(5-2)i}{n}\right) $$
+		$$\int_2^5(4-2x)dx = \lim\limits_{n\ra \infty} \dfrac{5-2}{n} \sum\limits_{i=1}^n \left[4-2 \left(2+\dfrac{(5-2)i}{n}\right)\right]$$
+		Luego, procedemos a resolver el límite
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[4-2 \left(2+\dfrac{3i}{n}\right)\right]$$
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[4-4-\dfrac{6i}{n}\right]$$
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[-\dfrac{6i}{n}\right]$$
+		$$= -18\lim\limits_{n\ra \infty} \dfrac{1}{n^2} \sum\limits_{i=1}^n i$$
+		$$= -18\lim\limits_{n\ra \infty} \dfrac{1}{n^2} \dfrac{n(n+1)}{2}$$
+		$$= -9\lim\limits_{n\ra \infty} \dfrac{n+1}{n}$$
+		$$= -9$$
+\end{solucion}
+\item Exprese los siguientes límites como una integral
+	
+\begin{tasks}(2)
+\task $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
+\task $\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$
+\end{tasks}
+\begin{solucion}
+Para lograr esto, debemos acomodar el límite para que tenga la estructura de una Suma de Riemann, es decir,
+		$$\lim\limits_{n \ra \infty} \dfrac{b-a}{n}\sum\limits_{k=0} f\left(a+\dfrac{(b-a)k}{n}\right)$$
+\begin{enumerate}[a)]
+\item Reorganizando el límite pedido,
+		$$ = \lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$$
+		$$ = \lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n\left(1+\dfrac{3k}{n}\right)}$$
+		$$ = \dfrac{1}{3} \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{k=0}^n \dfrac{1}{1+\dfrac{3k}{n}}$$
+		Llegamos a una suma de Riemann, que esta asociada a la función $f(x) = \dfrac{1}{1+x}$ en el intervalo $[0, 3]$, por lo que
+		$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k} = \dfrac{1}{3} \displaystyle\int_0^3 \dfrac{dx}{1+x}$$
+\item $\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$\\
+\\
+Notemos que esto se puede esribir como,
+$$\lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{n+k}{n^2+k^2}$$
+Amplificando por $\dfrac{1}{n^2}$,
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{n+k}{n^2+k^2}\cdot \dfrac{\frac{1}{n^2}}{\frac{1}{n^2}}$$
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{\frac{1}{n}+\frac{k}{n^2}}{1+\left(\frac{k}{n}\right)^2}$$
+Luego, factorizamos por $\dfrac{1}{n}$,
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{1}{n} \cdot \dfrac{1+\frac{k}{n}}{1+\left(\frac{k}{n}\right)^2}$$
+$$= \lim\limits_{n \ra \infty} \dfrac{1}{n}  \sum\limits_{k=1}^n \dfrac{1+\frac{k}{n}}{1+\left(\frac{k}{n}\right)^2}$$
+Ahora, tenemos una Suma de Riemann que esta asociada al intervalo $[0, 1]$ y la función $f(x) = \dfrac{1+x}{1+x^2}$, por lo que
+$$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2} = \int_0^1 \dfrac{1+x}{1+x^2} dx$$
+\end{enumerate}
+\end{solucion}
+\item Calcule $\lim\limits_{n \ra \infty} \sqrt[]{\dfrac{1}{n^3}} + \sqrt[]{\dfrac{2}{n^3}} + \dots  + \sqrt[]{\dfrac{1}{n^2}}$
+\begin{solucion}
+Notemos que podemos escribir el límite como
+$$\lim\limits_{n \ra \infty} \sum\limits_{k=1}^{n}\sqrt[]{\dfrac{k}{n^3}} =
+\lim\limits_{n \ra \infty} \dfrac{1}{n} \sum\limits_{k=1}^{n}\sqrt[]{\dfrac{k}{n}}$$
+Luego, podemos ver que $a=0$, $b=1$ y $f(x) = \sqrt[]{x}$, por lo que
+$$
+\lim\limits_{n \ra \infty} \dfrac{1}{n} \sum\limits_{k=1}^{n}\sqrt[]{\dfrac{k}{n}} = \displaystyle\int_0^1\sqrt[]{x}dx$$
+Resolvemos,
+$$\displaystyle\int_0^1\sqrt[]{x}dx = 
+\displaystyle\int_0^1 x^{1/2}dx =
+\dfrac{2}{3}x^{3/2} \ev_0^1 =
+\dfrac{2}{3}
+$$
+Por lo que
+$$\lim\limits_{n \ra \infty} \sqrt[]{\dfrac{1}{n^3}} + \sqrt[]{\dfrac{2}{n^3}} + \dots  + \sqrt[]{\dfrac{1}{n^2}} = \dfrac{2}{3}$$
+\end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int 2xdx$
+\task $\displaystyle\int e^{ln(x^2)}dx$
+\task $\displaystyle\int 4cos(2x)dx$
+\task $\displaystyle\int 6e^{3x}dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int 2xdx = x^2 + c$
+\item $\displaystyle\int e^{ln(x^2)}dx = \displaystyle\int x^2dx = \dfrac{x^3}{3} + c$
+\item $\displaystyle\int 4cos(2x)dx = 2sen(2x) + c$
+\item $\displaystyle\int 6e^{3x}dx = 2e^{3x} + c$
+\end{enumerate}
+\end{solucion}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int (3x^2 + 2x + 1)dx$
+\task $\displaystyle\int x(x+1)(x+2)dx$
+\task $\displaystyle\int sen^2(x)dx$
+\task $\displaystyle\int (1+e)^xdx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int (3x^2 + 2x + 1)dx = \displaystyle\int 3x^2dx + \displaystyle\int 2xdx + \displaystyle\int dx  = 3\displaystyle\int x^2dx + 2\displaystyle\int xdx + \displaystyle\int dx $
+			$$= 3\dfrac{x^3}{3} + 2\dfrac{x^2}{2} + x + c = x^3 + x^2 + x + c$$
+\item $\displaystyle\int x(x+1)(x+2)dx = \displaystyle\int (x^3+3x^2+2x)dx = \dfrac{x^4}{4}+x^3+x+c$
+\item $\displaystyle\int sen^2(x)dx = \displaystyle\int \dfrac{1-cos(2x)}{2}dx = \displaystyle\int \dfrac{1}{2}dx - \displaystyle\int \dfrac{cos(2x)}{2} = \dfrac{x}{2} -\dfrac{sen(2x)}{4} + c$
+\item $\displaystyle\int (1+e)^xdx = \dfrac{(1+e)^x}{ln(1+e)}$
+\end{enumerate}
+\end{solucion}
+\item Sea
+$$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
+	Calule $F'(\pi /4)$
+\begin{solucion}
+En primer lugar, saquemos la variable $x$ de la integral
+		$$F(x) = x\displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt$$
+		Fijemonos que estamos frente a dos funciones, por lo que debemos usar la regla de la multiplicación y luego el TFC.
+		$$F'(x) = \displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt + 2x^2\left(\dfrac{tan(t)}{1+t^2}\ev_0^{x^2}\right)$$
+		$$= \displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt + 2x^2\left(\dfrac{tan(x^2)}{1+x^4}\right)$$
+		Luego, evaluamos en $x = \pi /4, obteniendo$
+		$$F'(\pi /4) = \displaystyle\int_0^{(\pi /4)^2} \dfrac{tan(t)}{1+t^2}dt + 2(\pi /4)^2\left(\dfrac{tan((\pi /4)^2)}{1+(\pi /4)^4}\right)$$
+\end{solucion}
+\item Calcular $F'(0)$, siendo
+	$$F(x) = \displaystyle\int_0^{5x+1} \dfrac{e^{t^2}}{1+t^4}dt$$
+\begin{solucion}
+Usando el TFC, tenemos que
+		$$F'(x) = \dfrac{e^{(5x+1)^2}}{1+(5x+1)^4} \cdot 5$$
+		Luego, evaluamos en $x=0$
+		$$F'(0) = \dfrac{5e^{(1)^2}}{1+(1)^4} = \dfrac{5e}{2}$$
+\end{solucion}
+\item Calcule los siguientes límites, en caso de que existan
+\begin{tasks}(2)
+\task $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$ 
+\task $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$
+\task $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$
+\task $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$
+\task $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$
+\task $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$
+\task $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$
+\task $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$\\
+\\
+Al evaluar en $x = 5$, podemos ver que se genera una discontinuidad,
+$$\lim\limits_{x \ra 5} \dfrac{1}{x-5} = \dfrac{1}{5-5} = \dfrac{1}{0} = \infty = \not\exists$$
+Por lo tanto, concluimos que el límite no existe.
+\item $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$\\
+\\
+Como no se genera ninguna discontinuidad en $x = 2$, podemos evaluar directamente, obteniendo
+$$\lim\limits_{x \ra 2} \dfrac{4x}{6-x} = \dfrac{4 \cdot 2}{6-2} = \dfrac{8}{4} = 2$$
+\item $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$\\
+\\
+Al evaluar en $x = -1$, podemos notar que obtendremos $\dfrac{0}{0}$, lo que no nos dice nada. Entonces, tenemos que buscar otra forma de evaluar el límite. Intentemos factorizar.
+$$\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1} = \lim\limits_{x \ra -1} \dfrac{(x+1)(x^2-x+1)}{(x+1)(x-1)} = \lim\limits_{x \ra -1} \dfrac{(x^2-x+1)}{(x-1)} = -\dfrac{3}{2}$$
+Al factorizar somos capaces de eliminar lo que nos generaba problemas y luego podemos evaluar directamente.
+\item $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$\\
+\\
+En este caso, nos ocurre algo similar al ejercicio anterior, sin embargo, no es tan sencillo la simplificación que debemos hacer. \\
+Para esto, utilicemos el método de la sustitución. Sea $u = \sqrt[]{4-x}$,\\
+Luego,
+$$x \ra 3$$
+$$-x \ra -3$$
+$$4-x \ra 1$$
+$$\sqrt[]{4-x} \ra 1$$
+$$u \ra 1$$
+Procedemos a escribir el límite en términos de $u$
+$$\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}
+= \lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} $$
+Ahora, resolvemos como siempre, es decir,
+$$\lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} 
+= \lim\limits_{u \ra 1} \dfrac{u-1}{(1+u)(1-u)}
+= \lim\limits_{u \ra 1} \dfrac{-(1-u)}{(1+u)(1-u)}
+= \lim\limits_{u \ra 1} \dfrac{-1}{(1+u)}
+= -\dfrac{1}{2}$$
+\item $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$\\
+\\
+En este caso podríamos utilizar sustitución como antes, pero dado que hay dos raices distintas, sería complicado. Por lo tanto, usaremos la técnica de la racionalización, esto es
+$$\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}
+=\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1} \cdot \dfrac{\sqrt[]{3-x}+1}{\sqrt[]{3-x}+1} 
+=\lim\limits_{x \ra 2} \dfrac{(\sqrt[]{6-x}-2)(\sqrt[]{3-x}+1)}{2-x} $$
+Ahora, como lo que nos da problemas es el parentesis izquierdo, usaremos la sustitución
+$$u = \sqrt[]{6-x} \Longrightarrow u \ra 2$$
+Con esto, obtenemos el límite
+$$\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{u^2-4} 
+=\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{(u+2)(u-2)} 
+=\lim\limits_{u \ra 2} \dfrac{\sqrt[]{u^2-3}+1}{u+2}
+=\dfrac{1}{2}$$
+\item $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$\\
+\\
+Aquí podemos ver claramente que ambas partes del limite se hacen 0 en $x=1$. Sin embargo, al ser un polinomio de grado 4, se hace dificil factorizarlo \textit{al ojo}.\\
+Recordemos que por el Teorema del Resto, sabemos que si un polinomio $P(x)$ cumple con $P(a) = 0$, entonces $P(x)$ es divisible por $(x-a)$. Por lo tanto, ya sabemos que ambas partes son divisibles por $(x-1)$. Para factorizar entonces, podemos utilizar la división polinómica, dividiendo numerador y denominador por $(x-1)$.
+En primer lugar, hagamos $x^4+2x^3-3x^2+4x-4 : x-1$, es decir,
+\[
+\renewcommand\arraystretch{1.5}
+\setlength\doublerulesep{0pt}
+\begin{array}{rrrrrr}
+\multicolumn{1}{r|}{1} & 1 & 2 & -3 & 4 & -4\\\cline{2-6}
+& & 1& 3 & 0 & 4\\\cline{2-6}
+& 1 & 3& 0 & 4 & 0
+\end{array}
+\]
+por lo que $x^4+2x^3-3x^2+4x-4 : x-1 = x^3+3x^2+4$\\
+Luego, $x^4+2x-3 : x-1$, esto es,
+\[
+\renewcommand\arraystretch{1.5}
+\setlength\doublerulesep{0pt}
+\begin{array}{rrrrrr}
+\multicolumn{1}{r|}{1} & 1 & 0 & 0 & 2 & -3\\\cline{2-6}
+& & 1& 1 & 1 & 3\\\cline{2-6}
+& 1 & 1& 1 & 3 & 0
+\end{array}
+\]
+por lo que $x^4+2x-3 : x-1 = x^3+x^2+x+3$
+Entonces, podemos escribir el límite como
+$$\lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)(x-1)}{(x^3+x^2+x+3)(x-1)}
+= \lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)}{(x^3+x^2+x+3)}
+= \dfrac{8}{6} = \dfrac{4}{3}$$
+\item $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$\\
+\\
+Dado que el límite posee valores absolutos y estamos buscando el límite justo en el punto donde la definición del valor absoluto cambia, debemos evaluar el límite desde ambos lados.\\\\
+Recordemos que
+$$|x| = \begin{cases}
+x & x \geq 0 \\
+-x & x < 0
+\end{cases}
+$$
+Entonces el límite por el lado izquierdo es
+$$\lim\limits_{x \ra 0-} \dfrac{|x|(|x|-x)}{x^2} =
+\lim\limits_{x \ra 0-} \dfrac{x(x-x)}{x^2} =
+\lim\limits_{x \ra 0-} \dfrac{0}{x} =
+\lim\limits_{x \ra 0-} 0 =
+0$$
+Notemos que este límite es 0, dado que los $x$ se anulan entre si \textbf{antes} de evaluar el límite.\\\\
+Luego, por el lado derecho,
+$$\lim\limits_{x \ra 0+} \dfrac{|x|(|x|-x)}{x^2} =
+\lim\limits_{x \ra 0+} \dfrac{-x(-x-x)}{x^2} =
+\lim\limits_{x \ra 0+} \dfrac{2x^2}{x^2} =
+2 $$
+Como los límites laterales no coinciden, el límite no existe.
+\item $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$\\
+\\
+Un error común aquí sería hacer el límite por ambos lados cambiando el signo. Sin embargo, notemos que estamos buscando el límite en torno a $x=2$. A ambos lados de $x=2$, el valor absoluto seguira utilizando la misma definición, por lo que basta con evaluar inmediatamente. Con esto,
+$$\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right) = 
+\dfrac{1}{2}-\dfrac{1}{|2|} = 0$$
+\end{enumerate}
+\end{solucion}
+\item Resolver las siguientes integrales definidas
+\begin{tasks}(2)
+\task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
+\task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$\\
+			Usando la sustitución
+			$$u=x^3+8 \ra du =  3x^2dx$$
+			$$x \in (0, 2) \ra u \in (8, 16)$$
+			$$\displaystyle\int_0^2 \dfrac{x^2}{x^3+8}dx = \dfrac{1}{3}\displaystyle\int_8^{16} \dfrac{du}{u} = \dfrac{1}{3}ln(u) \ev_8^{16} = \dfrac{1}{3}(ln(16)-ln(8)) = \dfrac{1}{3}ln\left(\dfrac{16}{8}\right) = \dfrac{1}{3}ln(2)$$
+\item $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$\\
+			Usamos el cambio de variable
+			$$u = 1-x^2 \ra du = -2xdx$$
+			$$x \in (-1, 1) \ra u \in (0, 0)$$
+			Como la variable $u$ va de 0 a 0, entonces la integral es igual a 0. Luego,
+			$$\displaystyle\int_{-1}^1 xsen(1-x^2)dx = 0$$
+\end{enumerate}
+\end{solucion}
+\item Calcular
+\begin{tasks}(3)
+\task $\displaystyle\int_0^{\frac{1}{\sqrt[]{2}}} \dfrac{x \arcsin(x^2)}{\sqrt[]{1-x^4}}dx$
+\task $\displaystyle\int_0^{\ln(2)} e^x\ \sqrt[]{e^x-1}dx$
+\task $\displaystyle\int_{-3}^{4} |x-1|dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_0^{\frac{1}{\sqrt[]{2}}} \dfrac{x \arcsin(x^2)}{\sqrt[]{1-x^4}}dx$\\
+\\
+Usando la sustitución
+$$u = \arcsin(x^2) \ra du = \dfrac{2x}{\sqrt[]{1-x^4}}dx$$
+$$x \in (0, \frac{1}{\sqrt[]{2}}) \ra u \in (0, \frac{\pi}{6})$$
+$$\displaystyle\int_0^{\frac{1}{\sqrt[]{2}}} \dfrac{x \arcsin(x^2)}{\sqrt[]{1-x^4}}dx = 
+\dfrac{1}{2} \displaystyle\int_0^{\frac{\pi}{6}} udu =
+\dfrac{1}{4}u^2 \ev_0^{\frac{\pi}{6}} =
+\dfrac{\pi^2}{144}
+$$
+\item $\displaystyle\int_0^{\ln(2)} e^x\ \sqrt[]{e^x-1}dx$\\
+\\
+Usando la sustitución
+$$u = e^x-1 \ra du = e^xdx$$
+$$x \in (0, \ln(2)) \ra u \in (0, 1)$$
+$$\displaystyle\int_0^{\ln(2)} e^x\ \sqrt[]{e^x-1}dx=
+\displaystyle\int_0^{1} \sqrt[]{u}du = \dfrac{2}{3}u^{3/2} \ev_0^1 = \dfrac{2}{3}
+$$
+\item $\displaystyle\int_{-3}^{4} |x-1|dx$\\
+\\
+Al haber un valor absoluto, debemos separar la integral, de manera de ver ambos casos (positivo y negativo) por separado. El cambio de signo del valor absoluto ocurre en $x=1$, por lo que ahí es donde hay que separar la integral, esto es,
+$$\displaystyle\int_{-3}^{4} |x-1|dx = 
+\displaystyle\int_{-3}^{1} |x-1|dx + 
+\displaystyle\int_{1}^{4} |x-1|dx$$
+Aplicamos valor absoluto
+$$ = 
+\displaystyle\int_{-3}^{1} -(x-1)dx + 
+\displaystyle\int_{1}^{4} (x-1)dx$$
+Resolvemos,
+$$= \left(x-\dfrac{x^2}{2}\right)\ev_{-3}^1 +
+\left(x-\dfrac{x^2}{2}\right)\ev_{1}^4 = 8 + \dfrac{9}{2} = \dfrac{25}{2}$$
+\end{enumerate}
+\end{solucion}
+\item Calule el área de la región acotada por las curvas $y=x^2-4$ e $y = -x^2-2x$ en el intervalo $I =  [-3.3]$.
+\begin{solucion}
+Con ayuda del gráfico
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=-3:3,  
+			color=red,
+			]
+			{x^2-4};
+			\addplot [
+			domain=-3:3, 
+			color=blue,
+			]
+			{-x^2-2*x};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Podemos ver que el área acotada por las curvas la podemos separar en 3, quedandonos
+		$$A = \displaystyle\int_{-3}^{-2}[x^2-4-(-x^2-2x)]dx 
+		+ \displaystyle\int_{-2}^{1}[-x^2-2x-(x^2-4)]dx 
+		+ \displaystyle\int_{1}^{3}[x^2-4-(-x^2-2x)]dx$$
+		$$A = \displaystyle\int_{-3}^{-2}(2x^2+2x-4)dx 
+		+ \displaystyle\int_{-2}^{1}(4-2x-2x^2)dx 
+		+ \displaystyle\int_{1}^{3}(2x^2+2x-4)dx$$
+		$$A = \dfrac{11}{3} + 9 + \dfrac{52}{3} = \dfrac{90}{3} = 30$$
+\end{solucion}
+\item Encuentre el área acotada por las curvas por las curvas $y=x(x^2+11)$ e $y=6(x^2+1)$.
+\begin{solucion}
+Buscamos los puntos de intersección de ambas curvas, igualandolas
+		$$x(x^2+11) = 6(x^2+1)$$
+		$$x(x^2+11) - 6(x^2+1) = 0$$
+		$$x^3-6x^2+11x-6 = 0$$
+		$$(x-1)(x-2)(x-3)=0$$
+		Tenemos entonces que las curvas se intersectan en $x=1, x=2$ y $x=3$.\\
+		Necesitamos ver ahora cual curva va arriba y cual abajo. Notemos que
+		$$x^3-6x^2+11x-6 \geq 0\quad si \qquad 1 \leq x \leq 2$$
+		$$x^3-6x^2+11x-6 \leq 0\quad si \qquad 2 \leq x \leq 3$$
+		Con lo que concluimos que en $[1,2]$ la curva $y=x(x^2+11)$ va sobre la curva $y=6(x^2+1)$ y que en $[2,3]$ pasa lo contrario.\\
+		Finalmente,
+		$$A = \displaystyle\int_{1}^{2}[x(x^2+11) - 6(x^2+1)]dx 
+		+ \displaystyle\int_{2}^{3}[6(x^2+1) - x(x^2+11)]dx$$ 
+		$$A = \displaystyle\int_{1}^{2}(x^3-6x^2+11x-6)dx 
+		+ \displaystyle\int_{2}^{3}(6-11x+6x^2-x^3)dx$$ 
+		$$A = \dfrac{1}{4} + \dfrac{1}{4} = \dfrac{1}{2}$$
+\end{solucion}
+\item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
+\begin{solucion}
+\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=0:4,  
+			color=red,
+			]
+			{2*x^(1/2)};
+			\addplot [
+			domain=0:4, 
+			color=blue,
+			]
+			{x};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Integramos en el eje $y$, en $[0,4]$. Para esto, usaremos las ecuaciones $x=y$ y $x=\dfrac{y^2}{4}$, por lo que el área buscada será
+		$$A = \displaystyle\int_0^4 y-\dfrac{y^2}{4} dy$$
+		$$A = \dfrac{16}{2} - \dfrac{64}{12} = \dfrac{8}{3}$$
+\end{solucion}
+\item Hallar el área de la elipse
+	$$\dfrac{x^2}{9} + \dfrac{y^2}{4} = 1$$
+\begin{solucion}
+En primer lugar, despejemos $y$, es decir
+		$$y = \pm\dfrac{2\ \sqrt[]{9 - x^2}}{3}$$
+		Para encontrar el área, podemos buscar el área de un cuarto de la elipse y multiplicarla por 4, es decir
+		$$A = 4\displaystyle\int_0^3 \dfrac{2\ \sqrt[]{9 - x^2}}{3}dx$$
+		Utilizamos el cambio de variable $x =3sen(\theta) \ra dx = 3cos(\theta)d\theta$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2\ \sqrt[]{9 - 9sen^2(\theta)}}{3} 3cos(\theta)d\theta$$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2 \cdot 3cos(\theta)}{3} 3cos(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} cos^2(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} \dfrac{1+cos(2\theta)}{2}d\theta$$
+		$$A = 24 \cdot \dfrac{\pi}{4}$$
+		$$A = 6 \pi$$
+\end{solucion}
+\item Usando integrales, calcule el área del siguiente triangulo
+	\begin{center}
+		\begin{tikzpicture}
+		\begin{axis}[
+		axis lines = left,
+		xlabel = $x$,
+		ylabel = $y$,
+		]
+		\addplot [
+		domain=0:2,  
+		color=red,
+		]
+		{x};
+		\addplot [
+		domain=0:1, 
+		color=red,
+		]
+		{-x};
+		\addplot [
+		domain=1:2, 
+		color=red,
+		]
+		{3*x-4};
+		
+		\end{axis}
+		\end{tikzpicture}
+	\end{center}
+\begin{solucion}
+Notemos que los lados del triangulo se pueden representar como rectas. Esto es,
+		$$L_1:\quad y = x$$
+		$$L_2:\quad y = -x$$
+		$$L_3:\quad y = 3x-4$$
+		Luego, al área de triangulo será
+		$$A = \displaystyle\int_0^1 (x - (-x))dx + \displaystyle\int_1^2 (x - (3x-4))dx$$
+		$$A = \displaystyle\int_0^1 2xdx + \displaystyle\int_1^2 (4-2x)dx$$
+		$$A = 2$$
+\end{solucion}
 \end{preguntas}
 \end{document}
