--- a/2019/1/MAT1203/12.5/enunciado.tex
+++ b/2019/1/MAT1203/12.5/enunciado.tex
@@ -165,5 +165,23 @@ Determine una base para $Nul(T) $ y para $Im (T) $ y las dimensiones de estos su
 	\end{bmatrix}$ y diagonalice $B = A^{10} + A - I$ 
 \item La matriz $\begin{bmatrix} 1 & -2 \\ 1 & 3 \end{bmatrix}$ actúa sobre $\mathbb{C}^2$. Determine los valores propios y una base para cada espacio propio de $\mathbb{C}^2$.
 \item Sea $A$ una matriz de $5 \times 5$ tal que $A^t = -A$ y $q$ el polinomio dado por $q(x) = 2-x^2+4x^3$. Demuestre que $2$ es valor propio de la matriz $q(A)$.
+\item Sean $u, v$ dos vectores ortogonales en $\R^n$ tales que $||u|| = 1, ||v|| = \sqrt[]{3/2}$. Demuestre que el conjunto 
+	$$B = \{u-v, 3u+2v\}$$
+	es ortogonal y encuentre las coordenadas del vector $4u - 9v$ respecto al conjunto $B$.
+\item Demuestre que si $P$ es una matriz ortogonal de  $n \times n$, entonces para todo $x, y \in \R^n$ se tiene que $Px \cdot Py = x \cdot y$
+\item Diagonalice ortogonalmente
+	$$M = \begin{bmatrix}
+	1 & 0 & 1 \\
+	0 & 2 & 0 \\
+	1 & 0 & 1
+	\end{bmatrix}$$
+\item Sean $B = \begin{bmatrix} 1 & -1 \\ 0 & 0 \end{bmatrix}$ y $C = \{X \in M_2(\R)|BX=0\}$. Determine una base y la dimensión de $C$.
+\item Sea $T: \mathbb{P}_2 \ra \mathbb{P}_2$ una transformación lineal cuya matriz de transformación respecto a la base $B = \{1, t, t^2\}$ está dada por
+$$[T]_B = \begin{bmatrix}
+1 & -1 & 1\\
+0 & 2 & -1\\
+-1 & 3 & -2
+\end{bmatrix}$$
+Determine $T(t^2+1)$ y el espacio Nulo de $T$.
 \end{preguntas}
 \end{document}
