--- a/2019/1/MAT1203/12.5/solucion.tex
+++ b/2019/1/MAT1203/12.5/solucion.tex
@@ -339,7 +339,7 @@ $$[T]_B[t^2+1]_B = \begin{bmatrix}
 \end{pmatrix}
 =
 \begin{pmatrix}
-2 \\ -1 \\3
+2 \\ -1 \\ -3
 \end{pmatrix}$$
 Por lo tanto,
 $$T(t^2+1) = 2-t-3t^2$$
@@ -804,19 +804,19 @@ Buscamos los valores propios,
 		0 & -2 & 1-\lambda
 		\end{bmatrix}\right|
 		= (1+\lambda)^2(1-\lambda) = 0$$
-		$$\lambda_1 = -1 \ra \text{multiplicidad 2}$$
-		$$\lambda_2 = 1 \ra \text{multiplicidad 1}$$
+		$$\lambda_1 = 1 \ra \text{multiplicidad 1}$$
+		$$\lambda_2 = -1 \ra \text{multiplicidad 2}$$
 		Buscamos ahora los vectores propios,
 		\begin{itemize}
-			\item $\lambda_1 = -1$
+			\item $\lambda_1 = 1$
 			
-			$$(A+I)x = 0 \ra v_1 = \begin{pmatrix}
+			$$(A-I)x = 0 \ra v_1 = \begin{pmatrix}
 			1 \\ 0 \\ 1
 			\end{pmatrix}$$
 			
-			\item $\lambda_2 = 1$
+			\item $\lambda_2 = -1$
 			
-			$$(A-I)x = 0 \ra v_2 = \begin{pmatrix}
+			$$(A+I)x = 0 \ra v_2 = \begin{pmatrix}
 			1 \\ 0 \\ 0
 			\end{pmatrix}, \quad
 			v_2 = \begin{pmatrix}
@@ -844,7 +844,7 @@ Buscamos los valores propios,
 		B & = & A^{10} + A - I \\
 		 & = & (PDP^{-1})^{10} + PDP^{-1} - I \\
 		 & = & (PDP^{-1})^{10} + PDP^{-1} - PIP^{-1} \\
-		B & = & P(D^10 + D - I)P^{-1}
+		B & = & P(D^{10} + D - I)P^{-1}
 		\end{array}$$
 		Además, sabemos que
 		$$D^{10} = \begin{bmatrix}
@@ -905,7 +905,7 @@ Para hacer esto debemos hacer un procedimiento similar al que realizamos cuando 
 	$$B = \{u-v, 3u+2v\}$$
 	es ortogonal y encuentre las coordenadas del vector $4u - 9v$ respecto al conjunto $B$.
 \begin{solucion}
-Para demostrar que $B$ es ortogonal, debemos demostrar que todos sus elementos son ortogonales entre si, es decir, debemos demoestrar que
+Para demostrar que $B$ es ortogonal, debemos demostrar que todos sus elementos son ortogonales entre si, es decir, debemos demostrar que
 		$$(u-v) \cdot (3u+2v) = 0$$
 		Notemos que como $u$ y $v$ son ortogonales entre si, $u \cdot v = 0$. Luego,
 		$$\begin{array}{rcl}
