--- a/2018/1/MAT220E/4/solucion.tex
+++ b/2018/1/MAT220E/4/solucion.tex
@@ -113,5 +113,97 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule el siguiente límite
+	$$\lim\limits_{x \ra \infty} \dfrac{\displaystyle\int_0^{arctan(x)} sen(ln(t^2+t+1)) dt}{x}$$
+\begin{solucion}
+Al evaluar podemos ver que el límite tiene la forma $\dfrac{0}{0}$, por lo que podemos usar $L'Hopital$
+		$$\lim\limits_{x \ra \infty} \dfrac{\displaystyle\int_0^{arctan(x)} sen(ln(t^2+t+1)) dt}{x}
+		\stackrel{L'H}{=} \lim\limits_{x \ra \infty} \dfrac{sen(ln(arctan^2(x)+arctan(x)+1))}{1}$$
+		$$= \lim\limits_{x \ra \infty} sen(ln(arctan^2(x)+arctan(x)+1)) = sen(ln(1)) = sen(0) = 0$$
+\end{solucion}
+\item Resuelva la siguiente integral
+	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
+\begin{solucion}
+En primer lugar, utilizamos fracciones parciales para descomponer la integral
+		$$\dfrac{1}{x(2-x)} = \dfrac{A}{x} + \dfrac{B}{2-x}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{A(2-x) + Bx}{x(2-x)}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{2A-Ax + Bx}{x(2-x)}$$
+		$$\dfrac{1}{x(2-x)} = \dfrac{2A+ (B-A)x}{x(2-x)}$$
+		De esta forma, tenemos el siguiente sistema de ecuaciones
+		$$2A = 1, \quad B-A = 0 \ra A = \dfrac{1}{2}, \quad B = \dfrac{1}{2}$$
+		Entonces, tenemos que la descomposición es
+		$$\dfrac{1}{x(2-x)} = \dfrac{1}{2x} + \dfrac{1}{2(2-x)}$$
+		Luego, la integral original la podemos escribir como
+		$$\displaystyle\int \dfrac{dx}{x(2-x)} = \displaystyle\int \dfrac{dx}{2x} + \displaystyle\int \dfrac{dx}{2(2-x)}$$
+		$$ = \dfrac{1}{2} \left( \displaystyle\int \dfrac{dx}{x} + \displaystyle\int \dfrac{dx}{2-x} \right)$$
+		$$ = \dfrac{1}{2} (ln|x| - ln|2-x| ) + c$$
+\end{solucion}
+\item Calcular la integral
+	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
+\begin{solucion}
+Como vemos que el grado del numerador es mayor que el del denominador, realizamos división polinómica, es decir, calculamos
+		$$x^3+6x^2+13x+10 : x+1$$
+		Esto lo podemos hacer utilizando división sintética
+		$$
+		\renewcommand\arraystretch{1.5}
+		\setlength\doublerulesep{0pt}
+		\begin{array}{rrrrr}
+		\multicolumn{1}{r|}{1} & 1 & 6 & 13 & 10\\\cline{2-5}
+		& & 1& 5 & 8 \\\cline{2-5}
+		& 1 & 5& 8 & 2 
+		\end{array}
+		$$
+		De donde obtenemos que
+		$$\dfrac{x^3+6x^2+13x+10}{x+1} = x^2 +5x + 8 + \dfrac{2}{x+1}$$
+		Luego,
+		$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx = \displaystyle\int_0^1 \left(x^2 + 5x + 8 +  \dfrac{2}{x+1}\right)dx$$
+		$$= \left( \dfrac{x^3}{3} + \dfrac{5x^2}{2} + 8x + 2ln(x+1)\right) \ev_0^1 = \dfrac{1}{3} + \dfrac{5}{2} + 8 + 2ln(2) = \dfrac{65}{6} + 2 ln(2)$$
+\end{solucion}
+\item Calcule el área de la región que se encuentra bajo la gráfica de la función $f(x) = e^xx^2$, donde $x \in [1,2]$
+\begin{solucion}
+Esta área esta dada por la integral
+		$$\displaystyle \int_1^2 e^x x^2dx$$
+		Calculemos primero la integral indefinida. Para esto, utilizamos integración por partes, con
+		$$U = x^2 \ra du = 2xdx$$
+		$$dv = e^xdx \ra V = e^x$$
+		$$\displaystyle \int e^x x^2dx = x^2e^x - 2 \displaystyle \int e^x xdx$$
+		Para la segunda integral usamos nuevamente integración por partes, con
+		$$U = x \ra du = dx$$
+		$$dv = e^xdx \ra V = e^x$$
+		Luego,
+		$$\displaystyle \int e^x xdx = xe^x - \displaystyle \int e^x dx = xe^x - e^x$$
+		Reemplazando en la primera, tenemos que
+		$$\displaystyle \int e^x x^2dx = x^2e^x - 2 (xe^x - e^x) = e^x(x^2-2x+2)$$
+		Finalmente,
+		$$\displaystyle \int_1^2 e^x x^2dx = e^x(x^2-2x+2) \ev_1^2 = 2e^2 - e$$
+\end{solucion}
+\item Calcule la siguiente integral
+	$$\displaystyle\int sen^3(x)cos^4(x)dx$$
+\begin{solucion}
+Como el exponente del seno es impar, lo separamos y dejamos un seno aislado
+		$$\displaystyle\int sen^2(x)cos^4(x) sen(x)dx$$
+		Luego, pasamos todo a coseno
+		$$\displaystyle\int (1-cos^2(x))cos^4(x) sen(x)dx$$
+		A continuación, utilizamos la sustitución $u = cos(x) \ra du = -sen(x)dx$
+		$$\displaystyle\int (1-u^2)u^4(- du) = -\displaystyle\int (u^4-u^6)du = -(\dfrac{u^5}{5} - \dfrac{u^7}{7}) +c= \dfrac{u^7}{7}-\dfrac{u^5}{5} + c$$
+		Por último, volvemos a la variable original, con lo que
+		$$\displaystyle\int sen^3(x)cos^4(x)dx = \dfrac{cos^7(x)}{7}-\dfrac{cos^5(x)}{5} + c$$
+\end{solucion}
+\item $$\displaystyle\int x^2\ arctan(x)dx$$
+\begin{solucion}
+Usamos integración por partes, con
+		$$U = arctan(x) \ra du = \dfrac{dx}{1+x^2}$$
+		$$dv = x^2 \ra V = \dfrac{x^3}{3}dx$$
+		Luego,
+		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{3} \displaystyle\int \dfrac{x^3}{x^2+1}dx$$
+		Para la integral del lado derecho, usamos sustitución con $m = 1+x^2 \ra dm = 2xdx$, con lo que
+		$$\displaystyle\int \dfrac{x^3}{x^2+1}dx
+		= \dfrac{1}{2}\displaystyle\int \dfrac{m-1}{m}dm
+		= \dfrac{1}{2}\displaystyle\int \left(1-\dfrac{1}{m}\right)dm = \dfrac{1}{2}(m-ln|m|)$$
+		Volvemos a la variable original
+		$$= \dfrac{1}{2}(1+x^2-ln(1+x^2))$$
+		Finalmente, reemplazando en el inicio,
+		$$\displaystyle\int x^2\ arctan(x)dx = \dfrac{x^3}{3}arctan(x) - \dfrac{1}{6} (1+x^2-ln(1+x^2))$$
+\end{solucion}
 \end{preguntas}
 \end{document}
